--- a/index.html
+++ b/index.html
@@ -5,9 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gears</title>
+    <!-- font owesome -->
+    <script
+    src="https://kit.fontawesome.com/cdada410d7.js"
+    crossorigin="anonymous"
+    ></script>
+    <!-- Style Sheet -->
     <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
-    
+    <header>
+        <h3>Influencer products</h3>
+        <nav class="nav-class">
+            <ul class="nav-ul">
+                <li><a href=""><i class="fa-solid fa-house-chimney"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-product-hunt"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-user-plus"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="section-1">
+            <div class="div1">
+                <article>
+                    <h1>Start your Journey as <br>Influencer</h1>    
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>              
+                </article>
+                <a href="">Preebook Now <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="pic-div1">
+                <img id="background"src="logos/camera-icon.svg" alt="">
+                <img src="images/main-camera.png" alt="Camera">
+            </div>
+        </section>
+        <section class="section-2">
+            <ul>
+                <a href=""><img src="logos/Alibaba.svg" alt=""></a>
+                <a href=""><img src="logos/Amazon.svg" alt=""></a>
+                <a href=""><img src="logos/Daraz.pk Logo.svg" alt=""></a>
+                <a href=""><img src="logos/Ebay.svg" alt=""></a>
+                <a href=""><img src="logos/Rakuten.svg" alt=""></a>
+                <a href=""><img src="logos/Walmart.svg" alt=""></a>
+                <a href=""><img src="logos/Target.svg" alt=""></a>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
